--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,10 @@ repositories {
 def allureVersion = "2.19.0",
     restAssuredVersion = "5.2.0",
     junitVersion = "5.9.0",
-    slf4jVersion = "1.7.32"
+    slf4jVersion = '2.0.3',
+    fakerVersion = "1.0.2",
+    ownerVersion = "1.0.4",
+    assertjVersion = "3.23.1"
 
 allure {
     report {
@@ -28,12 +31,14 @@ allure {
 
 dependencies {
     testImplementation(
-            "com.codeborne:selenide:6.7.2",
+            'com.codeborne:selenide:6.8.1',
             "io.qameta.allure:allure-selenide:$allureVersion",
             "io.rest-assured:rest-assured:$restAssuredVersion",
             "org.junit.jupiter:junit-jupiter:$junitVersion",
             "org.slf4j:slf4j-simple:$slf4jVersion",
-            "com.github.javafaker:javafaker:1.0.2"
+            "com.github.javafaker:javafaker:$fakerVersion",
+            "org.aeonbits.owner:owner:$ownerVersion",
+            "org.assertj:assertj-core:$assertjVersion"
     )
 }
 
