--- a/src/test/resources/remote.properties
+++ b/src/test/resources/remote.properties
@@ -1,6 +1,7 @@
-browser=firefox
-browserVersion=98
+browser=chrome
+browserVersion=100
 browserSize=1920x1080
 browserPosition=0x0
 baseUrl=https://demowebshop.tricentis.com/
+baseURI=https://demowebshop.tricentis.com/
 remoteUrl=https://user1:1234@selenoid.autotests.cloud/wd/hub
