edit remote properties

--- a/src/test/resources/remote.properties
+++ b/src/test/resources/remote.properties
@@ -3,5 +3,6 @@ browserVersion=100
 browserSize=1920x1080
 browserPosition=0x0
 baseUrl=https://demowebshop.tricentis.com/
-baseURI=https://demowebshop.tricentis.com/
+
+isRemote=true
 remoteUrl=https://user1:1234@selenoid.autotests.cloud/wd/hub
