--- a/src/test/resources/local.properties
+++ b/src/test/resources/local.properties
@@ -1,6 +1,8 @@
 browser=chrome
-browserVersion=106.0
+browserVersion=107.0
 browserSize=1920x1080
 browserPosition=0x0
 baseUrl=https://demowebshop.tricentis.com/
-baseURI=https://demowebshop.tricentis.com/
+
+isRemote=false
+remoteUrl=https://demowebshop.tricentis.com/
